<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocAddActivity">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/context_menu" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp">



        <ImageView
            android:id="@+id/vacImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/addVacTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_syringe" />

        <TextView
            android:id="@+id/addVacTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addVacTitle"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/PassportNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacImage" />

        <EditText
            android:id="@+id/PassportNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/passportNumberHint"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/vaccinesName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addVacTitle" />

        <EditText
            android:id="@+id/vaccinesName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vacNameHint"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/vaccinesDate"
            app:layout_constraintTop_toBottomOf="@+id/PassportNumber" />

        <EditText
            android:id="@+id/vaccinesDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vacDateHint"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/vaccinesTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vaccinesName" />

        <EditText
            android:id="@+id/vaccinesTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vacTimeHint"
            android:inputType="time"
            app:layout_constraintBottom_toTopOf="@+id/addVacButton"
            app:layout_constraintTop_toBottomOf="@+id/vaccinesDate" />

        <Button
            android:id="@+id/addVacButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/BackgroundAccent"
            android:onClick="onAddClicked"
            android:text="@string/addButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vaccinesTime" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>