<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="5dp"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:clickable="true"
    android:onClick="onSingleVacView"
    android:background="@drawable/vaccine_list_item_boarder">

    <TextView
        android:id="@+id/tvVaccineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Covid-19"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVaccineDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="01.01.2021"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>